engine/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__safety_buffering_retry_confirmation.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Stop this attempt and retry?

  This will stop the current attempt and retry in a new thread. Any file
  changes or other actions already taken will remain.

  Your message will be sent again using Faster Model, which may be less
  capable on complex tasks.


› 1. Keep waiting
  2. Stop and retry
